apps/cloudcart/user-service/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  namespace: cloudcart-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service

          image: roshan033/cloudcart-user-service:build-21

          imagePullPolicy: Always

          ports:
            - containerPort: 5001

          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
