apps/cloudcart/user-service/user-service-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service
  namespace: cloudcart-dev

spec:
  type: ClusterIP

  selector:
    app: user-service

  ports:
    - port: 5001
      targetPort: 5001
